# example-client-pact

./: Cargo.toml  README.md  flake.nix
src/: main.rs
test/: Consumer-Example_Service.json
