[package]
name = "example-client-pact"
version = "0.1.0"
edition = "2021"

[dependencies]
pact_consumer = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
